1.1alpha1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented issue #14250: Support for the Content-Disposition headers in the
  abstract result and response objects.
- Implemented issue #13844: Support reverse route generation: create an URL
  from an argument.


1.0 - Monday 05 January 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Refactored HTTP response writer to allow for user-defined status objects to
  be used.


1.0rc1 - Monday 15 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13920: Cookies are part of response, but not of request.
- Fixed issue #14041: MVC tutorial improvement by clarifying the
  createFatalRedirectRequest dispatcher configuration method.


1.0beta1 - Monday 01 December 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13918: Http Request Parser is missing DELETE.
- Fixed issue #14003: split() is deprecated in PHP 5.3.
- Implemented issue #13919: Added the runPreRoutingFilters() method to the
  ezcMvcDispatcherConfiguration interface and ezcMvcDispatcherConfigurable
  dispatcher, to be called after request generation, but before routing. This
  change breaks BC as it adds a new method to the ezcMvcDispatcherConfiguration
  interface.
- Implemented issue #13921: The ezcMvcConfigurableDispatcher now throws
  exceptions if the configuration does not return objects of the expected
  class.
- Implemented issue #13926: Split ezcMvcDispatcherConfigurable::run() into
  smaller parts.


1.0alpha2 - Monday 10 November 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Split out controller creation in the ezcMvcConfigurableDispatcher into its
  own method (createController()) for easier customization of controller
  loading.
- Fixed a bug where path elements where not urldecoded().